--- a/smhi/quadrant.liquid
+++ b/smhi/quadrant.liquid
@@ -2,11 +2,11 @@
   <div class="columns">
     {% assign i = 1 %}
     {% assign show = trmnl.plugin_settings.custom_fields_values.items_narrow | plus: 0 %}
-    {% assign type = "Snö, Snöbland, Regn, Dugg, Unsk regn, Unsk dugg" | split: ", " %}
-    {% for hours in timeSeries %}
-      {% assign hour = hours.validTime | date: "%H" %}
-      {% if hour == "12" %}
-        {% for param in hours.parameters %}
+    {% assign type = "–, Snö, Snöbland, Regn, Dugg, Undk regn, Undk dugg" | split: ", " %}
+    {% for series in timeSeries %}
+      {% assign hour = series.validTime | date: "%H" %}
+      {% if hour == trmnl.plugin_settings.custom_fields_values.hours_narrow %}
+        {% for param in series.parameters %}
           {% assign value = param.values[0] | plus: 0 %}
           {% if param.name == "t" %}
             {% assign temp = value | round %}
@@ -23,7 +23,7 @@
           {% endif %}
         {% endfor %}
         <div class="column">
-          <div class="label label--small label--inverted">{{ hours.validTime | date: "%a %H:%S" }}</div>
+          <div class="label label--small label--inverted">{{ series.validTime | date: "%a %H:%S" }}</div>
           <div class="value value--xxsmall value--tnums">{{ temp }}°C</div>
           <div class="value value--xxsmall value--tnums">{{ precip }}mm</div>
           <div class="value value--xxsmall value--tnums">{{ wind }}–{{ gust }}m/s</div>
