--- a/smhi/full.liquid
+++ b/smhi/full.liquid
@@ -1,12 +1,14 @@
 <div class="layout">
   <div class="columns">
-    {% assign i = 1 %}
-    {% assign show = trmnl.plugin_settings.custom_fields_values.items_wide | plus: 0 %}
-    {% assign hours = trmnl.plugin_settings.custom_fields_values.hours_wide %}
+    {% assign hours = "07, 13, 19" %}
     {% assign type = "–, Snö, Snöbland, Regn, Dugg, Undk regn, Undk dugg" | split: ", " %}
+    {% assign show = 8 %}
+    {% assign i = 0 %}
     {% for series in timeSeries %}
-      {% assign hour = series.validTime | date: "%H" %}
+      {% assign validtimetz = series.validTime | date: "%s" | plus: trmnl.user.utc_offset %}
+      {% assign hour = validtimetz | date: "%H" %}
       {% if hours contains hour %}
+        {% assign i = i | plus: 1 %}
         {% for param in series.parameters %}
           {% assign value = param.values[0] | plus: 0 %}
           {% if param.name == "t" %}
@@ -24,7 +26,7 @@
           {% endif %}
         {% endfor %}
         <div class="column">
-          <div class="label label--small label--inverted">{{ series.validTime | date: "%a %H:%S" }}</div>
+          <div class="label label--small label--inverted">{{ validtimetz | date: "%a %H:%S" }}</div>
           <div class="value value--xxsmall value--tnums">{{ temp }}°C</div>
           <div class="value value--xxsmall value--tnums">{{ precip }}mm</div>
           <div class="value value--xxsmall value--tnums">{{ wind }}–{{ gust }}m/s</div>
@@ -32,7 +34,6 @@
           <div class="value value--xxsmall value--tnums">{{ pcat }}</div>
         </div>
         {% if i == show %}{% break %}{% endif %}
-        {% assign i = i | plus: 1 %}
       {% endif %}
     {% endfor %}
   </div>
