--- a/smhi/full.liquid
+++ b/smhi/full.liquid
@@ -1,41 +1,95 @@
-<div class="layout">
-  <div class="columns">
-    {% assign hours = "07, 13, 19" %}
-    {% assign type = "–, Snö, Snöbland, Regn, Dugg, Undk regn, Undk dugg" | split: ", " %}
-    {% assign show = 8 %}
-    {% assign i = 0 %}
-    {% for series in timeSeries %}
-      {% assign validtimetz = series.validTime | date: "%s" | plus: trmnl.user.utc_offset %}
-      {% assign hour = validtimetz | date: "%H" %}
-      {% if hours contains hour %}
-        {% assign i = i | plus: 1 %}
-        {% for param in series.parameters %}
-          {% assign value = param.values[0] | plus: 0 %}
-          {% if param.name == "t" %}
-            {% assign temp = value | round %}
-          {% elsif param.name == "ws" %}
-            {% assign wind = value | round %}
-          {% elsif param.name == "gust" %}
-            {% assign gust = value | round %}
-          {% elsif param.name == "pmean" %}
-            {% assign precip = value %}
-          {% elsif param.name == "r" %}
-            {% assign humid = value %}
-          {% elsif param.name == "pcat" %}
-            {% assign pcat = type[value] %}
-          {% endif %}
-        {% endfor %}
-        <div class="column">
+{%- assign hours = "07, 13, 19" | split: ", " -%}
+{%- assign show = 8 -%}
+{%- assign type = ", Snö, Snöbland, Regn, Dugg, Undk regn, Undk dugg" | split: ", " -%}
+{%- assign symbol = ", Klar himmel, Nästan klar himmel, Varierande molnighet, Halvklart, Molnig himmel, Mulet, Dimma, Lätta regnskurar, Måttliga regnskurar, Kraftiga regnskurar, Åskväder, Lätta snöslaskskurar, Måttliga snöslaskskurar, Kraftiga snöslaskskurar, Lätta snöbyar, Måttliga snöbyar, Kraftiga snöbyar, Lätt regn, Måttligt regn, Kraftigt regn, Åska, Lätt snöslask, Måttlig snöslask, Kraftig snöslask, Lätt snöfall, Måttligt snöfall, Kraftigt snöfall" | split: ", " -%}
+{%- assign i = 0 -%}
+
+{%- for series in timeSeries -%}
+  {%- assign validtimetz = series.validTime | date: "%s" | plus: trmnl.user.utc_offset -%}
+  {%- assign hour = validtimetz | date: "%H" -%}
+    {%- for param in series.parameters -%}
+      {%- assign value = param.values[0] | plus: 0 -%}
+      {%- if param.name == "t" -%}
+        {%- assign temp = value | round -%}
+      {%- elsif param.name == "ws" -%}
+        {%- assign wind = value | round -%}
+      {%- elsif param.name == "gust" -%}
+        {%- assign gust = value | round -%}
+      {%- elsif param.name == "pmean" -%}
+        {%- assign precip = value -%}
+      {%- elsif param.name == "r" -%}
+        {%- assign humid = value -%}
+      {%- elsif param.name == "pcat" -%}
+        {%- assign pcat = type[value] -%}
+      {%- elsif param.name == "Wsymb2" -%}
+        {%- assign wsymb = symbol[value] -%}
+      {%- endif -%}
+    {%- endfor -%}
+    {% break %}
+{%- endfor -%}
+
+<div class="title_bar">
+  <span class="title">{{ validtimetz | date: "%A %Y-%m-%d %H:%S" }}</span>
+  <span class="instance">{{ wsymb }}</span>
+</div>
+
+<div class="layout layout--col">
+  <div class="grid grid--cols-3 stretch-y">
+    <div class="item">
+      <div class="content flex flex--center-x">
+        <span class="value value--xxlarge value--tnums">{{ temp }}°</span>
+        <span class="label label--large">Temp °C</span>
+      </div>
+    </div>
+    <div class="item">
+      <div class="meta"></div>
+      <div class="content flex flex--center-x">
+        <span class="value value--xxlarge value--tnums">{{ precip }}</span>
+        <span class="label label--large">{{ pcat | default: "Nederbörd"}} mm</span>
+      </div>
+    </div>
+    <div class="item">
+      <div class="meta"></div>
+      <div class="content flex flex--center-x">
+        <span class="value value--xxlarge value--tnums">{{ wind }}–{{ gust }}</span>
+        <span class="label label--large">Vind m/s</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="grid grid--cols-{{ show }}">
+    {%- for series in timeSeries -%}
+      {%- assign validtimetz = series.validTime | date: "%s" | plus: trmnl.user.utc_offset -%}
+      {%- assign hour = validtimetz | date: "%H" -%}
+      {%- if hours contains hour -%}
+        {%- assign i = i | plus: 1 -%}
+        {%- for param in series.parameters -%}
+          {%- assign value = param.values[0] | plus: 0 -%}
+          {%- if param.name == "t" -%}
+            {%- assign temp = value | round -%}
+          {%- elsif param.name == "ws" -%}
+            {%- assign wind = value | round -%}
+          {%- elsif param.name == "gust" -%}
+            {%- assign gust = value | round -%}
+          {%- elsif param.name == "pmean" -%}
+            {%- assign precip = value -%}
+          {%- elsif param.name == "r" -%}
+            {%- assign humid = value -%}
+          {%- elsif param.name == "pcat" -%}
+            {%- assign pcat = type[value] -%}
+          {%- endif -%}
+        {%- endfor -%}
+        <div class="flex flex--col flex--left">
           <div class="label label--small label--inverted">{{ validtimetz | date: "%a %H:%S" }}</div>
           <div class="value value--xxsmall value--tnums">{{ temp }}°C</div>
           <div class="value value--xxsmall value--tnums">{{ precip }}mm</div>
           <div class="value value--xxsmall value--tnums">{{ wind }}–{{ gust }}m/s</div>
           <div class="value value--xxsmall value--tnums">{{ humid }}%</div>
-          <div class="value value--xxsmall value--tnums">{{ pcat }}</div>
+          <div class="value value--xxsmall value--tnums">{{ pcat | default: "–" }}</div>
         </div>
-        {% if i == show %}{% break %}{% endif %}
-      {% endif %}
-    {% endfor %}
+        {%- if i == show %}{% break %}{% endif -%}
+      {%- endif -%}
+    {%- endfor -%}
   </div>
 </div>
 
