--- a/smhi/full.liquid
+++ b/smhi/full.liquid
@@ -2,6 +2,8 @@
 {%- assign show = 8 -%}
 {%- assign type = ", Snö, Snöbland, Regn, Dugg, Undk regn, Undk dugg" | split: ", " -%}
 {%- assign symbol = ", Klar himmel, Nästan klar himmel, Varierande molnighet, Halvklart, Molnig himmel, Mulet, Dimma, Lätta regnskurar, Måttliga regnskurar, Kraftiga regnskurar, Åskväder, Lätta snöslaskskurar, Måttliga snöslaskskurar, Kraftiga snöslaskskurar, Lätta snöbyar, Måttliga snöbyar, Kraftiga snöbyar, Lätt regn, Måttligt regn, Kraftigt regn, Åska, Lätt snöslask, Måttlig snöslask, Kraftig snöslask, Lätt snöfall, Måttligt snöfall, Kraftigt snöfall" | split: ", " -%}
+{%- assign days_l = ", Måndag, Tisdag, Onsdag, Torsdag, Fredag, Lördag, Söndag" | split: ", " -%}
+{%- assign days = ", Mån, Tis, Ons, Tors, Fre, Lör, Sön" | split: ", " -%}
 {%- assign i = 0 -%}
 
 {%- for series in timeSeries -%}
@@ -27,9 +29,10 @@
     {%- endfor -%}
     {% break %}
 {%- endfor -%}
-
+{%- assign day_u = validtimetz | date: "%u" | plus: 0 -%}
+{%- assign day = days_l[day_u] -%}
 <div class="title_bar">
-  <span class="title">{{ validtimetz | date: "%A %Y-%m-%d %H:%S" }}</span>
+  <span class="title">{{ day }} {{ validtimetz | date: "%Y-%m-%d %H:%S" }}</span>
   <span class="instance">{{ wsymb }}</span>
 </div>
 
@@ -37,21 +40,21 @@
   <div class="grid grid--cols-3 stretch-y">
     <div class="item">
       <div class="content flex flex--center-x">
-        <span class="value value--xxlarge value--tnums">{{ temp }}°</span>
+        <span class="value value--xlarge value--tnums">{{ temp }}°</span>
         <span class="label label--large">Temp °C</span>
       </div>
     </div>
     <div class="item">
       <div class="meta"></div>
       <div class="content flex flex--center-x">
-        <span class="value value--xxlarge value--tnums">{{ precip }}</span>
+        <span class="value value--xlarge value--tnums">{{ precip }}</span>
         <span class="label label--large">{{ pcat | default: "Nederbörd"}} mm</span>
       </div>
     </div>
     <div class="item">
       <div class="meta"></div>
       <div class="content flex flex--center-x">
-        <span class="value value--xxlarge value--tnums">{{ wind }}–{{ gust }}</span>
+        <span class="value value--xlarge value--tnums">{{ wind }}–{{ gust }}</span>
         <span class="label label--large">Vind m/s</span>
       </div>
     </div>
@@ -79,8 +82,10 @@
             {%- assign pcat = type[value] -%}
           {%- endif -%}
         {%- endfor -%}
+        {%- assign day_u = validtimetz | date: "%u" | plus: 0 -%}
+        {%- assign day = days[day_u] -%}
         <div class="flex flex--col flex--left">
-          <div class="label label--small label--inverted">{{ validtimetz | date: "%a %H:%S" }}</div>
+          <div class="label label--small label--inverted">{{ day }} {{ validtimetz | date: "%H:%S" }}</div>
           <div class="value value--xxsmall value--tnums">{{ temp }}°C</div>
           <div class="value value--xxsmall value--tnums">{{ precip }}mm</div>
           <div class="value value--xxsmall value--tnums">{{ wind }}–{{ gust }}m/s</div>
