Force 24H format for elprisetjustnu.

--- a/elprisetjustnu/half_vertical.liquid
+++ b/elprisetjustnu/half_vertical.liquid
@@ -72,7 +72,8 @@
             style: {
               fontSize: "16px",
               color: "#000000"
-            }
+            },
+            format: '{value:%H:%S}'
           },
           lineWidth: 0,
           gridLineDashStyle: "dot",
