--- a/smhi/quadrant.liquid
+++ b/smhi/quadrant.liquid
@@ -64,6 +64,6 @@
 </div>
 
 <div class="title_bar">
-  <span class="title">SMHI väder</span>
+  <span class="title">SMHI</span>
   <span class="instance">{{ trmnl.plugin_settings.custom_fields_values.city }}</span>
 </div>
