--- a/caldav_custom/full.liquid
+++ b/caldav_custom/full.liquid
@@ -11,7 +11,7 @@
 <div class="layout layout--left">
   <div class="" style="display: flex; flex-flow: column wrap; height: 100%; gap: var(--gap);">
     {%- for event in sorted_days -%}
-    {%- assign day_s = event.date_time | date: "%s" | plus: 0 -%}
+    {%- assign day_s = event.date_time | date: "%Y-%m-%d" | date: "%s" | plus: 0 -%}
     {%- if today_s > day_s %}{% continue %}{% endif -%}
     <div style="width: calc(800px/3 - var(--gap)*2);">
       {%- assign i = i | plus: 1 -%}
@@ -19,10 +19,10 @@
       {%- assign month = event.date_time | date: "%m"| abs -%}
       {%- assign day_e = event.date_time | date: "%e" -%}
       {%- assign day_u = event.date_time | date: "%u" | plus: 0 -%}
-      <div class="label label--underline" style="margin-block-end: 7px;">{{ days_l[day_u] }}, {{ day_e }} {{ months_l[month] }}</div>
+      <div class="label label--underline mb--1">{{ days_l[day_u] }}, {{ day_e }} {{ months_l[month] }}</div>
       {%- endif -%}
       {%- assign day_prev = day_s -%}
-      <div style="margin-block-start: 4px;">
+      <div>
         <div class="label clamp--3" style="font-size: 13px;" data-pixel-perfect="true">{{ event.summary }}</div>
         {%- if event.description contains "Lunch 1" -%}
         {%- else -%}
